<resources>
    <string name="app_name">Hello Dr!</string>
    <string name="email_address">Email address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="load">load</string>
    <string name="email">Email</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="dr_name">Dr Name</string>
    <string name="specialist">Specialist</string>
    <string name="location">Location</string>
    <string name="search">Search</string>
    <string name="driver_name">Driver name</string>
    <string name="company">Company</string>
    <string name="driver_location">Driver Location</string>
    <string name="todo">TODO</string>
    <string name="patient_name">Patient name</string>
    <string name="phone_number">Phone number</string>

    <string-array name="Spinner_items">
        <item>Select any one</item>
        <item>Allergists</item>
        <item>Cardiologists</item>
        <item>Dermatologists</item>
        <item>Endocrinologists</item>
        <item>Gynecologists</item>
        <item>Neurologists</item>
        <item>Ophthalmologists</item>
        <item>Pediatricians</item>
    </string-array>

    <string-array name="Spinner_items2">
        <item>Select Location</item>
        <item>Ariyalur</item>
        <item>Chennai</item>
        <item>Coimbatore</item>
        <item>Cuddalore</item>
        <item>Dindigul</item>
        <item>Erode</item>
        <item>Kancheepuram</item>
        <item>Madurai</item>
        <item>Namakkal</item>
        <item>Salem</item>
    </string-array>
</resources>
