<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="4dp"
    app:cardCornerRadius="4dp"
    android:layout_marginTop="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <ImageView
            android:id="@+id/imgdriver"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:padding="4dp"
            android:src="@drawable/ambtn"
            android:contentDescription="@string/todo" />
        <TextView
            style="?android:textAppearanceLarge"
            android:textColor="@android:color/background_dark"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/imgdriver"
            android:text="@string/driver_name"
            android:id="@+id/txtdrivername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_toRightOf="@id/imgdriver" />

        <TextView
            android:id="@+id/txtcompany"
            style="?android:textAppearanceSearchResultTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtdrivername"
            android:layout_marginStart="11dp"
            android:layout_marginLeft="11dp"
            android:layout_toEndOf="@id/imgdriver"
            android:layout_toRightOf="@id/imgdriver"
            android:text="@string/company"
            android:textColor="#3F51B5" />

        <TextView
            android:id="@+id/txtdriverlocation"
            style="?android:textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtcompany"
            android:layout_marginStart="11dp"
            android:layout_marginLeft="11dp"
            android:layout_toEndOf="@id/imgdriver"
            android:layout_toRightOf="@id/imgdriver"
            android:text="@string/driver_location"
            android:textColor="#711212" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>