<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bookui">

    <Button
        android:id="@+id/two_pm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/twopm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.884"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <EditText
        android:id="@+id/patname"
        android:layout_width="280dp"
        android:layout_height="35dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/patient_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.269"
        android:autofillHints="Patient name" />

    <EditText
        android:id="@+id/patphnum"
        android:layout_width="280dp"
        android:layout_height="35dp"
        android:autofillHints="Phone number"
        android:background="@null"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.395" />

    <EditText
        android:id="@+id/appdate"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:autofillHints="Date"
        android:background="@null"
        android:ems="10"
        android:focusable="false"
        android:gravity="center"
        android:hint="@string/date"
        android:inputType="date"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHighlight="@color/cardview_shadow_start_color"
        android:textColorHint="@color/cardview_shadow_start_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.587" />

    <Button
        android:id="@+id/eight_am"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/eightam"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <Button
        android:id="@+id/ten_am"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/tenam"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <Button
        android:id="@+id/not_avail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/notava"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.88" />

    <Button
        android:id="@+id/six_pm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/sixpm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.879" />

    <Button
        android:id="@+id/seven_pm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/sevenpm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.884"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.879" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="192dp"
        android:layout_height="55dp"
        android:background="@drawable/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.989" />

</androidx.constraintlayout.widget.ConstraintLayout>